--- a/Prototip/style.css
+++ b/Prototip/style.css
@@ -1,6 +1,3 @@
-/* --- UPROŠĆENI CSS ZA PROTOTIP --- */
-
-/* Osnovni stilovi */
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -52,7 +49,6 @@ a {
     margin-left: 15px;
 }
 
-/* Forme i dugmad */
 .form-group {
     margin-bottom: 15px;
 }
@@ -83,7 +79,6 @@ textarea {
     text-decoration: none;
 }
 
-/* Lista oglasa ili korisnika */
 .item-list {
     border: 1px solid #ccc;
     height: 300px;
@@ -98,7 +93,6 @@ textarea {
     border-bottom: none;
 }
 
-/* Profilna stranica */
 .profile-sidebar {
     float: left;
     width: 200px;
@@ -127,4 +121,40 @@ textarea {
 .radio-options label {
     display: inline-block; 
     margin: 0 10px;
+}
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px;
+    position: relative; 
+}
+
+.close-btn {
+    color: #aaa;
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
