Dodato ime prezime na pocetak fajla
Change-Id: If44d8a493fe8abb5598ae75789ab099cc05397a0

--- a/Prototip/style.css
+++ b/Prototip/style.css
@@ -1,3 +1,4 @@
+/* Luka Zdravic */
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -24,7 +25,6 @@ a {
     color: #0000FF;
 }
 
-/* Header */
 .main-header {
     background-color: #ddd;
     padding: 10px 0;
