--- a/aplikacija/templates/admin-verify-tutor.html
+++ b/aplikacija/templates/admin-verify-tutor.html
@@ -7,32 +7,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Verifikacija Tutora</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{% static "style.css" %}">
 </head>
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="dashboard-admin.html" class="logo">StudyBuddy Admin</a>
-            <nav><a href="dashboard-admin.html">Nazad na tablu</a></nav>
+            <a href="{% url 'adminpanel' %}" class="logo">StudyBuddy Admin</a>
+            <nav><a href="{% url 'adminpanel' %}">Nazad na tablu</a></nav>
         </div>
     </header>
     <main class="container">
         <h1>Verifikacija tutora</h1>
         <h3>Tutori na čekanju:</h3>
-        <div class="item" style="display: flex; justify-content: space-between; align-items: center;">
-                <span><a href="public-profile.html">Mika Mikić</a></span>
-                <div>
-                    <a href="#" style="width: auto; background-color: #A6D785;">Verifikuj</a>
-                    <a href="#" style="width: auto; background-color: #FF7F7F;">Odbij</a>
+        {% for tutor in tutors %}
+            <form method="post">
+                {% csrf_token %}
+                <div class="item" style="display: flex; justify-content: space-between; align-items: center;">
+                    <span><a href="public-profile.html">{{ tutor.iduser.username }}</a> {{ tutor.name }} {{ tutor.surname }}</span>
+                    <div>
+                        <input type="hidden" name="tutor_id" value="{{ tutor.iduser.iduser }}">
+                        <button type="submit" name="action" value="verify" style="width: auto; background-color: #A6D785;">Verifikuj</button>
+                        <button type="submit" name="action" value="reject" style="width: auto; background-color: #FF7F7F;">Odbij</button>
+                    </div>
                 </div>
-            </div>
-            <div class="item" style="display: flex; justify-content: space-between; align-items: center;">
-                <span><a href="public-profile.html">Laza Lazić</a></span>
-                <div>
-                    <a href="#" style="width: auto; background-color: #A6D785;">Verifikuj</a>
-                    <a href="#" style="width: auto; background-color: #FF7F7F;">Odbij</a>
-                </div>
-        </div>
+            </form>
+        {% endfor %}
     </main>
 </body>
 </html>
