--- a/aplikacija/templates/index.html
+++ b/aplikacija/templates/index.html
@@ -7,15 +7,15 @@
 <head>
     <meta charset="UTF-8">
     <title>StudyBuddy</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{% static "style.css" %}">
 </head>
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="index.html" class="logo">StudyBuddy</a>
+            <a href="{% url 'homepage' %}" class="logo">StudyBuddy</a>
             <nav>
-                <a href="login.html">Prijavi se</a>
-                <a href="register.html">Registruj se</a>
+                <a href="{% url 'login' %}">Prijavi se</a>
+                <a href="{% url 'register' %}">Registruj se</a>
             </nav>
         </div>
     </header>
