--- a/aplikacija/templates/login.html
+++ b/aplikacija/templates/login.html
@@ -7,40 +7,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Prijavi se</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{% static "style.css" %}">
 </head>
 <body>
     <div class="container">
         <h2>Prijavi se</h2>
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="form-group">
                 <label>Korisničko ime</label>
-                <input type="text" required>
+                <input type="text" name="username" required>
             </div>
             <div class="form-group">
                 <label>Lozinka</label>
-                <input type="password" required>
+                <input type="password" name="password" required>
             </div>
+            <button type="submit" class="btn">Prijavi se</button>
         </form>
 
-        <hr>
-        <p><b>Izaberite ulogu za prijavu (prototip):</b></p>
-        
-        <form action="dashboard-student.html" style="margin-bottom:10px;">
-            <button type="submit" class="btn">Prijavi se kao Student</button>
-        </form>
-        
-        <form action="dashboard-tutor.html" style="margin-bottom:10px;">
-            <button type="submit" class="btn">Prijavi se kao Tutor</button>
-        </form>
-
-        <form action="dashboard-admin.html">
-            <button type="submit" class="btn">Prijavi se kao Admin</button>
-        </form>
-        <hr>
+        {% if error != None %}
+            <h2>{{ error }}</h2>
+        {% endif %}
 
         <a href="reset-password.html">Zaboravili ste lozinku?</a><br>
-        <a href="index.html">Nazad na početnu</a>
+        <a href="{% url 'homepage' %}">Nazad na početnu</a>
     </div>
 </body>
 </html>
