--- a/aplikacija/templates/register.html
+++ b/aplikacija/templates/register.html
@@ -7,29 +7,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Registracija</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{% static "style.css" %}">
 </head>
 <body>
-    <div class="container">
-        <h2>Kreiraj nalog</h2>
-        <form action="login.html">
-            <div class="form-group"><label>Ime</label><input type="text" required></div>
-            <div class="form-group"><label>Prezime</label><input type="text" required></div>
-            <div class="form-group"><label>Email</label><input type="email" required></div>
-            <div class="form-group"><label>Datum rođenja</label><input type="date" required></div>
-            <div class="form-group"><label>Korisničko ime</label><input type="text" required></div>
-            <div class="form-group"><label>Lozinka</label><input type="password" required></div>
-            <div class="form-group"><label>Potvrdi lozinku</label><input type="password" required></div>
-            <div class="form-group form-group-inline">
-                <label>Ja sam:</label>
-                <div class="radio-options">
-                    <label><input type="radio" name="role" checked> Student</label>
-                    <label><input type="radio" name="role"> Tutor</label>
-                </div>
-            </div>
-            <button type="submit" class="btn">Registruj se</button>
-        </form>
-        <a href="login.html">Već imate nalog? Prijavite se</a>
+<div class="container">
+<form method="post" action="">
+    {% csrf_token %}
+    <div class="form-group">
+        <label>Ime:</label>
+        <input required type="text" name="ime" placeholder="Enter Ime..."/>
     </div>
+    <div class="form-group">
+        <label>Prezime:</label>
+        <input required type="text" name="prezime" placeholder="Enter Prezime..."/>
+    </div>
+    <div class="form-group">
+       <label>Email:</label>
+        <input required type="text" name="email" placeholder="Enter Email..."/>
+    </div>
+    <div class="form-group">
+        <label>Datum:</label>
+        <input required type="date" name="datum" placeholder="Enter Prezime..."/>
+    </div>
+    <div class="form-group">
+        <label>Username:</label>
+        <input required type="text" name="username" placeholder="Enter Username..."/>
+    </div>
+    <div class="form-group">
+        <label>Password:</label>
+        <input required type="password" name="password" placeholder="Enter Password..."/>
+    </div>
+    <div class="form-group form-group-inline">
+        <div class="radio-options">
+            <label>
+                <input checked type="radio" name="role" value="student"> Student
+            </label>
+            <label>
+                <input type="radio" name="role" value="tutor"> Tutor
+            </label>
+        </div>
+    </div>
+    <div>
+        <button type="submit" class="btn" value="register">Registruj se</button>
+    </div>
+</form>
+    {% if msg != None %}
+        <h2>{{ msg }}</h2>
+    {% endif %}
+</div>
 </body>
 </html>
