--- a/aplikacija/templates/create-ad.html
+++ b/aplikacija/templates/create-ad.html
@@ -18,29 +18,30 @@
     </header>
     <main class="container">
         <h1>Kreiraj novi oglas</h1>
-        <form action="dashboard-student.html">
-            <div class="form-group"><label>Naziv oglasa</label><input type="text"></div>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group"><label>Naziv oglasa</label><input type="text" name="naziv_oglasa"></div>
             <div class="form-group">
                 <label>Predmet</label>
-                <input type="text" placeholder="Npr. Principi softverskog inženjerstva" required>
+                <input type="text" placeholder="Npr. Principi softverskog inženjerstva" required name="predmet">
             </div>
             <div class="form-group">
                 <label>Tip pomoći</label>
-                <select required>
+                <select required name="tip_pomoci">
                     <option value="" disabled selected>Izaberite tip pomoći...</option>
                     <option value="pomoc_izrada">Pomoć pri izradi projekta</option>
                     <option value="pomoc_ucenje">Pomoć pri učenju</option>
                     <option value="recenziranje">Recenziranje projekta</option>
                 </select>
             </div>
-            <div class="form-group"><label>Opis</label><textarea rows="5"></textarea></div>
+            <div class="form-group"><label>Opis</label><textarea rows="5" name="opis"></textarea></div>
             <div class="form-group">
                 <label>Prilozi (opciono)</label>
                 <div style="border:1px solid #999; padding: 20px; text-align:center;">Drag and drop polje</div>
             </div>
-            <div class="form-group"><label>Tagovi</label><input type="text"></div>
+            <div class="form-group"><label>Tagovi</label><input type="text" name="tagovi"></div>
             <button type="submit" class="btn">Postavi oglas</button>
-            <a href="dashboard-student.html" class="btn">Odustani od oglasa</a>
+            <a href="{% url 'dashboard_student' %}" class="btn">Odustani od oglasa</a>
         </form>
     </main>
 </body>
