--- a/aplikacija/templates/create-ad.html
+++ b/aplikacija/templates/create-ad.html
@@ -12,8 +12,8 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="index.html" class="logo">StudyBuddy</a>
-            <nav><a href="dashboard-student.html">Nazad na tablu</a></nav>
+            <a href="#" class="logo">StudyBuddy</a>
+            <nav><a href="{% url 'dashboard-student' %}">Nazad na tablu</a></nav>
         </div>
     </header>
     <main class="container">
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group"><label>Tagovi</label><input type="text" name="tagovi"></div>
             <button type="submit" class="btn">Postavi oglas</button>
-            <a href="{% url 'dashboard_student' %}" class="btn">Odustani od oglasa</a>
+            <a href="{% url 'dashboard-student' %}" class="btn">Odustani od oglasa</a>
         </form>
     </main>
 </body>
