Izmenjeno tako da logo vodi na dashboard umesto na index page
Change-Id: I624475e31f1a0ee8f1c7f036f799778679905efc

--- a/aplikacija/templates/public-profile.html
+++ b/aplikacija/templates/public-profile.html
@@ -12,7 +12,7 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="{% url 'homepage' %}" class="logo">StudyBuddy</a>
+            <a href="{% url 'home' tip=type %}" class="logo">StudyBuddy</a>
             <nav><a href="search-ads.html">Nazad na pretragu</a></nav>
         </div>
     </header>
