--- a/aplikacija/templates/public-profile.html
+++ b/aplikacija/templates/public-profile.html
@@ -13,7 +13,7 @@
     <header class="main-header">
         <div class="container">
             <a href="{% url 'home' tip=type %}" class="logo">StudyBuddy</a>
-            <nav><a href="search-ads.html">Nazad na pretragu</a></nav>
+            <nav><a href="{% url 'search_ads' %}">Nazad na pretragu</a></nav>
         </div>
     </header>
     <main class="container">
