Kreiranje oglasa, odredjeni korisnici vide odredjene stvari na oglasu
Change-Id: Ia41ad8ec49b58e58844f1fe6e3145373a0a2f6f1

--- a/aplikacija/templates/create-ad.html
+++ b/aplikacija/templates/create-ad.html
@@ -29,9 +29,9 @@
                 <label>Tip pomoći</label>
                 <select required name="tip_pomoci">
                     <option value="" disabled selected>Izaberite tip pomoći...</option>
-                    <option value="pomoc_izrada">Pomoć pri izradi projekta</option>
-                    <option value="pomoc_ucenje">Pomoć pri učenju</option>
-                    <option value="recenziranje">Recenziranje projekta</option>
+                    <option value="Pomoc pri izradi">Pomoć pri izradi projekta</option>
+                    <option value="Pomoc pri ucenju">Pomoć pri učenju</option>
+                    <option value="Pomoc za recenziranje projekta">Recenziranje projekta</option>
                 </select>
             </div>
             <div class="form-group"><label>Opis</label><textarea rows="5" name="opis"></textarea></div>
