Tutor ne moze na isti oglas vise puta da se prijavi
Change-Id: Ic65e58583d13102865d2adbb4004d941bd65f7f6

--- a/aplikacija/templates/view-ad.html
+++ b/aplikacija/templates/view-ad.html
@@ -73,7 +73,7 @@
         </div>
         <hr>
         {% endif %}
-        {% if jeTutor %}
+        {% if jeTutor and not poslaoZahtev %}
             <h3>Pošalji zahtev za saradnju</h3>
             <form method="post" action="{% url 'posalji_zahtev' oglas.idnotice %}">
                 {% csrf_token %}
