Otklonjen bug u prikazu profila, i estetske stvari za admina
Change-Id: I84d8e57bd411fee04a9ac3530c5865bfb8bfb533
Profil sada vraca na pocetnu stranicu posetioca, a ne onog ciji je profil. U verifikacionom view za admina sada admin moze da poseti profil tutora kog treba da verifikuje. Podsene boje dugmica za odbijanje i prihvatanje verifikacije tako da je intuitivno.

--- a/aplikacija/static/style.css
+++ b/aplikacija/static/style.css
@@ -79,6 +79,26 @@ textarea {
     text-decoration: none;
 }
 
+.btn-reject {
+    background-color: #d78080;
+    color: #9a0808;
+    padding: 10px 15px;
+    border: 1px solid #999;
+    font-size: 14px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.btn-accept {
+    background-color: #5df69f;
+    color: #2f7e51;
+    padding: 10px 15px;
+    border: 1px solid #999;
+    font-size: 14px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 .item-list {
     border: 1px solid #ccc;
     height: 300px;
@@ -157,4 +177,11 @@ textarea {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.opis {
+    border: 1px solid #b4b4b4;
+    height: 50px;
+    overflow-y: scroll;
+    padding: 10px;
 }
