--- a/aplikacija/templates/public-profile.html
+++ b/aplikacija/templates/public-profile.html
@@ -12,7 +12,7 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="{% url 'home' tip=type %}" class="logo">StudyBuddy</a>
+            <a href="{% url 'home' tip=myType %}" class="logo">StudyBuddy</a>
             <nav><a href="{% url 'search_ads' %}">Nazad na pretragu</a></nav>
         </div>
     </header>
@@ -30,8 +30,9 @@
                 <p><b>Prosečna ocena:  {{ avgRating }}</b></p>
                 <p><b>Broj recenzija: {{ countRating }}</b></p>
             {% endif %}
-            <button class="btn">Preuzmi CV</button>
-            <p>*Dostupno samo kada je korisnik Tutor</p>
+            {% if type == 'Tutor' and not myProfile %}
+                <button class="btn">Preuzmi CV</button>
+            {% endif %}
         </div>
         <div class="profile-main">
             {% if type == 'Student' %}
@@ -45,12 +46,16 @@
                 {% else %}
                 {% for notice in notices %}
                     <div class="item">
-                        <h3>{{ notice.description }}</h3>
+                        <h3>{{ notice.title }}</h3>
+                        <h4>Predmet: {{ notice.subject }}</h4>
                         <p>Tip: {{ notice.type }}</p>
                         <p>Objavio: <b>{{ notice.idpublisher.iduser.username }}</b></p>
                         {% if notice.idtutor %}
                             <p>Pomogao: <b>{{ notice.idtutor.iduser.username }}</b></p>
                         {% endif %}
+                        <div class="opis">
+                            <p>{{ notice.description }}</p>
+                        </div>
                     </div>
                 {% endfor %}
                 {% endif %}
