Dodato ucitavanje komentara koji postoje za korisnika na njegov profil
Change-Id: I6b86560c5eddb01d48e53ccc1997290e5e519945

--- a/aplikacija/templates/public-profile.html
+++ b/aplikacija/templates/public-profile.html
@@ -67,7 +67,14 @@
             <button class="btn">Ostani bez komentara</button>
             <hr>
             <h3>Komentari drugih</h3>
-            <div class="item"><b>Marko M:</b> Odlična pomoć!</div>
+            <div class="item-list">
+                {% for comment in comments %}
+                    <div class="item">
+                        <p class="opis">{{ comment.comment }}</p>
+                        <p>Postavio: <a href="{% url 'profile' %}?username={{ comment.idratinguser.username }}">{{ comment.idratinguser.username }}</a></p>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </main>
 </body>
