--- a/aplikacija/templates/search-ads.html
+++ b/aplikacija/templates/search-ads.html
@@ -12,8 +12,8 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="#" class="logo">StudyBuddy</a>
-            <nav><a href="{% url 'dashboard-student' %}">Nazad na tablu</a></nav>
+            <a href="{% url 'home' tip=myType %}" class="logo">StudyBuddy</a>
+            <nav><a href="{% url 'home' tip=myType %}">Nazad na tablu</a></nav>
         </div>
     </header>
     <main class="container">
