--- a/aplikacija/templates/search-ads.html
+++ b/aplikacija/templates/search-ads.html
@@ -1,4 +1,4 @@
-<!--Luka Zdravic-->
+<!-- Luka Zdravic -->
 
 {% load static %}
 
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pretraga Oglasa</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     <header class="main-header">
@@ -16,71 +16,63 @@
             <nav><a href="{% url 'home' tip=myType %}">Nazad na tablu</a></nav>
         </div>
     </header>
+
     <main class="container">
         <h1>Pretraga oglasa</h1>
-        <form>
-            <input type="search" placeholder="Pretraži...">
-            <button type="button" class="btn" id="open-filter-btn">Filter</button>
+        <form method="post" action="{% url 'search_ads' %}" class="filter-form">
+            {% csrf_token %}
+            <div>
+                <label for="search">Pretraži:</label>
+                <input type="search" id="search" name="search" placeholder="Unesi ključnu reč..."
+                       value="{{ request.GET.search }}">
+            </div>
+            <div>
+                <label>Tip pomoći:</label><br>
+                <label>
+                    <input type="checkbox" name="tip" value="Pomoc pri izradi">
+                    Pomoć pri izradi projekta
+                </label><br>
+                <label>
+                    <input type="checkbox" name="tip" value="Pomoc pri ucenju">
+                    Pomoć pri učenju
+                </label><br>
+                <label>
+                    <input type="checkbox" name="tip" value="Pomoc za recenziranje projekta">
+                    Recenziranje projekta
+                </label>
+            </div>
+
+            <div>
+                <label for="tag">Tag:</label>
+                <input type="text" id="tag" name="tag" placeholder="Npr. python, psi, etf..."
+                       value="{{ request.GET.tag }}">
+            </div>
+
+            <div>
+                <label for="min_rating">Minimalna ocena korisnika:</label>
+                <input type="number" id="min_rating" name="min_rating" min="1" max="5" step="0.1"
+                       value="{{ request.GET.min_rating }}">
+            </div>
+
+            <button type="submit" class="btn">Primeni filtere</button>
         </form>
+
         <hr>
+
+        <!-- 📜 List of ads -->
         <div class="item-list">
             {% for oglas in oglasi %}
-            <div class="item">
-                <h3><a href="{% url 'view_ad' oglas.idnotice %}">{{ oglas.title }}</a></h3>
-                <h5>Predmet:  {{ oglas.subject }}</h5>
-                <p>Postavio: {{ oglas.idpublisher.name }} {{ oglas.idpublisher.surname }}</p>
-                <p>Tip pomoci: {{ oglas.type }}</p>
-            </div>
-            <hr>
+                <div class="item">
+                    <h3><a href="{% url 'view_ad' oglas.idnotice %}">{{ oglas.title }}</a></h3>
+                    <h5>Predmet: {{ oglas.subject }}</h5>
+                    <p>Postavio: {{ oglas.idpublisher.name }} {{ oglas.idpublisher.surname }}</p>
+                    <p>Tip pomoći: {{ oglas.type }}</p>
+                </div>
+                <hr>
+            {% empty %}
+                <p>Nema oglasa koji odgovaraju filterima</p>
             {% endfor %}
         </div>
     </main>
-
-    <div id="filter-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <h2>Filteri</h2>
-            <form>
-                <div class="form-group">
-                    <label>Tip pomoći:</label>
-                    <div><label><input type="checkbox"> Pomoć pri izradi projekta</label></div>
-                    <div><label><input type="checkbox"> Pomoć pri učenju</label></div>
-                    <div><label><input type="checkbox"> Recenziranje projekta</label></div>
-                </div>
-                <div class="form-group">
-                    <label>Tag:</label>
-                    <input type="text" placeholder="Npr. python, psi, etf...">
-                </div>
-                <div class="form-group">
-                    <label>Minimalna ocena korisnika:</label>
-                    <input type="number" min="1" max="5" step="0.1" placeholder="Npr. 4.5">
-                </div>
-                <button type="button" class="btn" id="apply-filters-btn">Primeni filtere</button>
-            </form>
-        </div>
-    </div>
-
-    <script>
-        var modal = document.getElementById("filter-modal");
-        var openBtn = document.getElementById("open-filter-btn");
-        var closeBtn = document.getElementsByClassName("close-btn")[0];
-        var applyBtn = document.getElementById("apply-filters-btn");
-
-        openBtn.onclick = function() {
-            modal.style.display = "block";
-        }
-        closeBtn.onclick = function() {
-            modal.style.display = "none";
-        }
-        applyBtn.onclick = function() {
-            modal.style.display = "none";
-        }
-        window.onclick = function(event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-    </script>
-
 </body>
 </html>
