Promenjeno da se koristi username za poredjenje a ne ID
Change-Id: I40d62be529b9def2ac93dd4f9a08ec9cf9427ad7

--- a/aplikacija/templates/view-ad.html
+++ b/aplikacija/templates/view-ad.html
@@ -27,7 +27,7 @@
         <hr>
 
         {% if gotovaSaradnja %}
-            {% if request.user.id == idVlasnika or jaPomogao %}
+            {% if request.user.username == usernameVlasnika or jaPomogao %}
                 <div style="display: flex; justify-content: center; margin-top: 20px;">
                     <form method="post">
                         {% csrf_token %}
@@ -39,7 +39,7 @@
             {% endif %}
         {% endif %}
 
-        {% if request.user.id == idVlasnika and gotovaSaradnja is None %}
+        {% if request.user.username == usernameVlasnika and gotovaSaradnja is None %}
         <h3>Prijavljeni tutori</h3>
         <div class="item-list">
             {% for tutor in tutoriNeprihvaceni %}
