--- a/aplikacija/templates/dashboard-tutor.html
+++ b/aplikacija/templates/dashboard-tutor.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="create-cv.html">Kreiraj CV</a></li>
             <li><a href="edit-cv.html">Uredi svoj CV</a></li>
-            <li><a href="search-ads.html">Pretraži oglase</a></li>
+            <li><a href={% url 'search_ads' %}>Pretraži oglase</a></li>
             <li><a href="#">Preuzmi svoj CV</a></li>
         </ul>
     </main>
