Dodat prelaz na reset-password i nazad na login page
Change-Id: Id4f8f448eafecedbf6ba903340d5488a3e8891cb

--- a/aplikacija/templates/reset-password.html
+++ b/aplikacija/templates/reset-password.html
@@ -21,7 +21,7 @@
             <div class="form-group"><label>Potvrdi novu lozinku</label><input type="password" required></div>
             <button type="submit" class="btn">Potvrdi</button>
         </form>
-        <a href="login.html">Nazad na prijavu</a>
+        <a href="{% url 'login'  %}" >Nazad na prijavu</a><br>
     </div>
 </body>
 </html>
