--- a/aplikacija/templates/login.html
+++ b/aplikacija/templates/login.html
@@ -28,8 +28,7 @@
         {% if error != None %}
             <h2>{{ error }}</h2>
         {% endif %}
-
-        <a href="reset-password.html">Zaboravili ste lozinku?</a><br>
+        <a href="{% url 'reset_password'  %}" >Zavoravili ste lozinku?</a><br>
         <a href="{% url 'homepage' %}">Nazad na početnu</a>
     </div>
 </body>
