--- a/aplikacija/templates/create-cv.html
+++ b/aplikacija/templates/create-cv.html
@@ -12,21 +12,25 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <a href="index.html" class="logo">StudyBuddy</a>
-            <nav><a href="dashboard-tutor.html">Nazad na tablu</a></nav>
+            <a href={% url 'dashboard-tutor' %} class="logo">StudyBuddy</a>
+            <nav><a href={% url 'dashboard-tutor' %}>Nazad na tablu</a></nav>
         </div>
     </header>
     <main class="container">
         <h1>Kreiraj CV</h1>
-        <form action="dashboard-tutor.html">
-            <div class="form-group"><label>Ime</label><input type="text" required></div>
-            <div class="form-group"><label>Prezime</label><input type="text" required></div>
-            <div class="form-group"><label>Slika</label><input type="file" required></div>
-            <div class="form-group"><label>O meni</label><textarea rows="3" required></textarea></div>
-            <div class="form-group"><label>Edukacija</label><textarea rows="3" required></textarea></div>
-            <div class="form-group"><label>Projekti</label><textarea rows="3" required></textarea></div>
-            <div class="form-group"><label>Iskustvo</label><textarea rows="3" required></textarea></div>
+        <form method="post" action="">
+            {% csrf_token %}
+            <div class="form-group"><label>Ime</label><input type="text" name="ime" required></div>
+            <div class="form-group"><label>Prezime</label><input type="text" name="prezime" required></div>
+            <div class="form-group"><label>Slika</label><input type="file" name="slika"></div>
+            <div class="form-group"><label>O meni</label><textarea rows="3" name="oMeni"></textarea></div>
+            <div class="form-group"><label>Edukacija</label><textarea rows="3" name="edukacija" required></textarea></div>
+            <div class="form-group"><label>Projekti</label><textarea rows="3" name="projekti"></textarea></div>
+            <div class="form-group"><label>Iskustvo</label><textarea rows="3" name="iskustvo"></textarea></div>
             <button type="submit" class="btn">Sačuvaj</button>
+            {% if msg != None %}
+            <span> {{ msg }}</span>
+            {% endif %}
         </form>
     </main>
 </body>
