Reset lozinke preko email tokena
Change-Id: I58b95f4a926a37d59d2f3e56b00648f76dc07ec6

--- a/aplikacija/templates/login.html
+++ b/aplikacija/templates/login.html
@@ -28,7 +28,7 @@
         {% if error != None %}
             <h2>{{ error }}</h2>
         {% endif %}
-        <a href="{% url 'reset_password'  %}" >Zavoravili ste lozinku?</a><br>
+        <a href="{% url 'password_reset'  %}" >Zavoravili ste lozinku?</a><br>
         <a href="{% url 'homepage' %}">Nazad na početnu</a>
     </div>
 </body>
