--- a/aplikacija/templates/reset-password.html
+++ b/aplikacija/templates/reset-password.html
@@ -1,27 +1,16 @@
-<!--Luka Zdravic-->
-
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="sr">
 <head>
     <meta charset="UTF-8">
-    <title>Reset Lozinke</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <title>{% block title %}Reset Lozinke{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
     <div class="container">
-        <h2>Resetovanje lozinke</h2>
-        <form action="login.html">
-            <div class="form-group"><label>Email</label><input type="email" required></div>
-            <button type="button" class="btn">Pošalji kod</button>
-            <hr>
-            <div class="form-group"><label>Verifikacioni kod</label><input type="text" required></div>
-            <div class="form-group"><label>Nova lozinka</label><input type="password" required></div>
-            <div class="form-group"><label>Potvrdi novu lozinku</label><input type="password" required></div>
-            <button type="submit" class="btn">Potvrdi</button>
-        </form>
-        <a href="{% url 'login'  %}" >Nazad na prijavu</a><br>
+    <h2>{% block header %}Resetovanje lozinke{% endblock %}</h2>
+    {% block content %}{% endblock %}
+    <a href="{% url 'login' %}">Nazad na prijavu</a><br>
     </div>
 </body>
 </html>
