--- a/aplikacija/templates/create-cv.html
+++ b/aplikacija/templates/create-cv.html
@@ -18,15 +18,36 @@
     </header>
     <main class="container">
         <h1>Kreiraj CV</h1>
-        <form method="post" action="">
+        <form method="post" action="" enctype="multipart/form-data">
             {% csrf_token %}
-            <div class="form-group"><label>Ime</label><input type="text" name="ime" required></div>
-            <div class="form-group"><label>Prezime</label><input type="text" name="prezime" required></div>
-            <div class="form-group"><label>Slika</label><input type="file" name="slika"></div>
-            <div class="form-group"><label>O meni</label><textarea rows="3" name="oMeni"></textarea></div>
-            <div class="form-group"><label>Edukacija</label><textarea rows="3" name="edukacija" required></textarea></div>
-            <div class="form-group"><label>Projekti</label><textarea rows="3" name="projekti"></textarea></div>
-            <div class="form-group"><label>Iskustvo</label><textarea rows="3" name="iskustvo"></textarea></div>
+            <div class="form-group">
+                <label>Ime</label>
+                <input type="text" name="ime" required>
+            </div>
+            <div class="form-group">
+                <label>Prezime</label>
+                <input type="text" name="prezime" required>
+            </div>
+            <div class="form-group">
+                <label>Slika</label>
+                <input type="file" name="slika">
+            </div>
+            <div class="form-group">
+                <label>O meni</label>
+                <textarea rows="3" name="oMeni"></textarea>
+            </div>
+            <div class="form-group">
+                <label>Edukacija</label>
+                <textarea rows="3" name="edukacija" required></textarea>
+            </div>
+            <div class="form-group">
+                <label>Projekti</label>
+                <textarea rows="3" name="projekti"></textarea>
+            </div>
+            <div class="form-group">
+                <label>Iskustvo</label>
+                <textarea rows="3" name="iskustvo"></textarea>
+            </div>
             <button type="submit" class="btn">Sačuvaj</button>
             {% if msg != None %}
             <span> {{ msg }}</span>
