Dodato preuzimanje CV-a tutora od strane studenta
Change-Id: If9babf83425ed36ad98ef447583b553baf328c06

--- a/aplikacija/templates/public-profile.html
+++ b/aplikacija/templates/public-profile.html
@@ -31,7 +31,7 @@
                 <p><b>Broj recenzija: {{ countRating }}</b></p>
             {% endif %}
             {% if type == 'Tutor' and not myProfile %}
-                <button class="btn">Preuzmi CV</button>
+                <a class="btn" href="{% url 'download_tutors_cv' user.iduser.username %}">Preuzmi CV</a>
             {% endif %}
         </div>
         <div class="profile-main">
